@@ -24,6 +24,7 @@
 #include <config.h>
 
 #include "av-cp-renderercombo.h"
+#include "icons.h"
 
 static GtkWidget *renderer_combo;
 
@@ -45,7 +46,7 @@ find_renderer (GtkTreeModel *model,
 
                 gtk_tree_model_get (model,
                                     iter,
-                                    1, &info,
+                                    2, &info,
                                     -1);
 
                 if (info) {
@@ -66,6 +67,29 @@ find_renderer (GtkTreeModel *model,
         }
 
         return found;
+}
+
+void
+update_device_icon (GUPnPDeviceInfo *info,
+                    GdkPixbuf       *icon)
+{
+        GtkTreeModel *model;
+        GtkTreeIter   iter;
+        const char   *udn;
+
+        model = gtk_combo_box_get_model (GTK_COMBO_BOX (renderer_combo));
+        g_assert (model != NULL);
+
+        udn = gupnp_device_info_get_udn (info);
+
+        if (find_renderer (model, udn, &iter)) {
+                gtk_tree_store_set (GTK_TREE_STORE (model),
+                                    &iter,
+                                    0, icon,
+                                    -1);
+        }
+
+        g_object_unref (icon);
 }
 
 void
@@ -104,9 +128,13 @@ add_media_renderer (GUPnPDeviceProxy *renderer)
                                 (GTK_LIST_STORE (model),
                                  &iter,
                                  -1,
-                                 0, name,
-                                 1, renderer,
+                                 0, get_icon_by_id (ICON_DEVICE),
+                                 1, name,
+                                 2, renderer,
                                  -1);
+
+                schedule_icon_update (info);
+
                 if (was_empty)
                         gtk_combo_box_set_active_iter (combo, &iter);
         }
@@ -133,6 +161,7 @@ remove_media_renderer (GUPnPDeviceProxy *renderer)
         model = gtk_combo_box_get_model (combo);
 
         if (find_renderer (model, udn, &iter)) {
+                unschedule_icon_update (info);
                 gtk_list_store_remove (GTK_LIST_STORE (model), &iter);
                 gtk_combo_box_set_active (combo, 0);
         }
@@ -143,7 +172,8 @@ create_renderer_treemodel (void)
 {
         GtkListStore *store;
 
-        store = gtk_list_store_new (2,
+        store = gtk_list_store_new (3,
+                                    GDK_TYPE_PIXBUF, /* Icon           */
                                     G_TYPE_STRING,   /* Name           */
                                     G_TYPE_OBJECT);  /* renderer proxy */
 
@@ -157,12 +187,29 @@ setup_renderer_combo_text_cell (GtkWidget *renderer_combo)
 
         renderer = gtk_cell_renderer_text_new ();
 
+        g_object_set (renderer, "xalign", 0.0, NULL);
         gtk_cell_layout_pack_start (GTK_CELL_LAYOUT (renderer_combo),
                                     renderer,
                                     TRUE);
         gtk_cell_layout_add_attribute (GTK_CELL_LAYOUT (renderer_combo),
                                        renderer,
-                                       "text", 0);
+                                       "text", 1);
+}
+
+static void
+setup_renderer_combo_pixbuf_cell (GtkWidget *renderer_combo)
+{
+        GtkCellRenderer *renderer;
+
+        renderer = gtk_cell_renderer_pixbuf_new ();
+        g_object_set (renderer, "xalign", 0.0, NULL);
+
+        gtk_cell_layout_pack_start (GTK_CELL_LAYOUT (renderer_combo),
+                                    renderer,
+                                    FALSE);
+        gtk_cell_layout_add_attribute (GTK_CELL_LAYOUT (renderer_combo),
+                                       renderer,
+                                       "pixbuf", 0);
 }
 
 void
@@ -179,6 +226,7 @@ setup_renderer_combo (GladeXML *glade_xml)
         gtk_combo_box_set_model (GTK_COMBO_BOX (renderer_combo), model);
         g_object_unref (model);
 
+        setup_renderer_combo_pixbuf_cell (renderer_combo);
         setup_renderer_combo_text_cell (renderer_combo);
 }
 
